# vacancyradar

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
data/: professional_roles.yaml  regions.yaml  skills_taxonomy.yaml  tg_channels.yaml
docs/: architecture.md  dashboard-ux-research-2025.md
docs/contracts/: embeddings-v1.md  query-encoder-v1.md  slim-active-v1.md  slim-events-v1.md  weekly-aggregates-v1.md
scripts/: run_collect.sh
src/: cli.py  config.py
src/cli_modules/: __init__.py  auth.py  enrich.py  ingest.py  prune.py  publish.py  refdata.py  report.py
src/enrich/: embeddings.py  ner_skills.py  region.py  salary_norm.py  skills_match.py
src/ingest/: cbr_rates.py  hh_api.py  hh_auth.py  hh_crawler.py  hh_detail.py  hh_shards.py  raw_lake.py  refdata.py  tg_client.py  tg_parse.py
src/publish/: blob_push.py  blob_ttl.py  embeddings_export.py  hf_mirror.py  neon_schema.sql  neon_sync.py  snapshots.py
src/reports/: employer_profile.qmd  monthly_digest.qmd  skill_landscape.qmd
src/transform/: dedup.py  events_derivation.py  lake_compact.py  slim_events.py  slim_export.py  tg_to_raw.py  weekly_aggregates.py
static-proto/: .gitignore  README.md  build_artifact.py  dashboard.html  index.html
static-proto/house-style/: echarts-theme.js  tokens.css
tests/: conftest.py  test_smoke.py
tests/integration/: test_neon_parity.py
tests/unit/: test_blob_push.py  test_blob_ttl.py  test_build_artifact.py  test_cbr_rates.py  test_cli_enrich.py  test_cli_enrich_embeddings.py  test_cli_ingest_hh.py  test_cli_ingest_hh_full_sweep.py  test_cli_ingest_telegram.py  test_cli_main.py  test_cli_misc.py  test_cli_report.py  test_config.py  test_dedup.py  test_embeddings.py  test_embeddings_export.py  test_events_derivation.py  test_gen_skill_synonyms.py  test_hf_mirror.py  test_hh_api.py  test_hh_auth.py  test_hh_crawler.py  test_hh_detail.py  test_hh_shards.py  test_lake_compact.py  test_ner_skills.py  test_prune_events.py  test_publish_neon_shrinkage.py  test_publish_neon_sync.py  (+14 more)
tools/: backfill_desc_changed_payload_null.py  backfill_events.py  gen_skill_synonyms.py  search_preflight.py
web/: .gitignore  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vercel.json  vitest.config.ts
(+52 files in other folders)
